[package]
name = "err-logging"
version = "0.1.0"
edition = "2021"
authors = ["malefooo <784479660@qq.com>"]
readme = "README.md"
description = "When result is an error, print the file name, line number, and uid."
repository = "https://github.com/malefooo/err-logging"
keywords = ["err", "error", "log", "logging", "print"]
license = "MIT/Apache-2.0"

[dependencies]
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
once_cell = "1.19.0"
tokio = {version = "1.37.0", features = ["full"]}
pin-project = "1.1.5"


[dev-dependencies]
env_logger = "0.11.3"